# slashit

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF_PR_REVIEW.md  LICENSE  README.md  SECURITY.md  Trunk.toml  dev.sh  index.html  package-lock.json  package.json  playwright.config.ts  styles.css  tailwind.css
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/slashit-cli/: Cargo.toml
crates/slashit-cli/src/: client.rs  main.rs  output.rs
crates/slashit-ipc/: Cargo.toml
crates/slashit-ipc/src/: lib.rs
src/: AGENTS.md  app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  lib.rs  main.rs  test_helpers.rs
src-tauri/src/acp/: client.rs  mod.rs  protocol.rs  session.rs  stream.rs
src-tauri/src/agents/: AGENTS.md  mod.rs  roles.rs  runner.rs
src-tauri/src/commands/: agent.rs  appearance.rs  changelog.rs  executor.rs  file.rs  github.rs  jira.rs  jj.rs  mcp.rs  memory.rs  mod.rs  pr.rs  project.rs  qa.rs  queue.rs  repository.rs  review.rs  roadmap.rs  session.rs  task.rs  tray.rs  workflow.rs  workspace.rs  worktree.rs
src-tauri/src/config/: mod.rs  queue.rs  storage.rs
src-tauri/src/domain/: AGENTS.md  appearance.rs  changelog.rs  file.rs  github.rs  jira.rs  mcp.rs  memory.rs  mod.rs  project.rs  roadmap.rs  session.rs  task.rs  tests.rs  workspace.rs
src-tauri/src/ipc/: handlers.rs  mod.rs  server.rs
src-tauri/src/jj/: CLAUDE.md  manager.rs  mod.rs  workspace.rs
src-tauri/src/pty/: commands.rs  manager.rs  mod.rs  store.rs  tests.rs
src-tauri/src/queue/: executor.rs  manager.rs  mod.rs  prompt.rs  workflow.rs
src-tauri/src/session/: mod.rs
src-tauri/src/worktree/: manager.rs  mod.rs
src-tauri/tests/: pr_review_integration.rs
src/components/: agent_panel.rs  app_layout.rs  badge.rs  bulk_actions.rs  create_project_modal.rs  custom_select.rs  diff_viewer.rs  icons.rs  jj_status.rs  kanban.rs  keyboard_shortcuts.rs  log_viewer.rs  mod.rs  modals.rs  phase_badge.rs  progress_bar.rs  project_card.rs  project_rail.rs  project_tabs.rs  queue_settings_modal.rs  quit_dialog.rs  sidebar.rs  skeleton.rs  subtask_list.rs  task_card.rs  task_context_menu.rs  task_edit_modal.rs  terminal_grid.rs  toast.rs  workspace_panel.rs  worktree_cleanup_dialog.rs
src/components/roadmap/: audience_badge.rs  competitor_analysis_modal.rs  feature_card.rs  mod.rs  roadmap_board.rs
src/components/terminal/: component.rs  input.rs  mod.rs  parser.rs  render.rs  state.rs  tests.rs
src/models/: agent.rs  github.rs  mod.rs  project.rs  repository.rs  roadmap.rs  task.rs
src/pages/: agent.rs  changelog.rs  context.rs  dashboard.rs  github_issues.rs  github_prs.rs  ideation.rs  insights.rs  mcp.rs  mod.rs  roadmap.rs  settings.rs  spec.rs  worktrees.rs
src/services/: agent_service.rs  appearance_service.rs  github_service.rs  jj_service.rs  mod.rs  pr_service.rs  project_service.rs  pty_service.rs  queue_service.rs  repository_service.rs  roadmap_service.rs  session_service.rs  task_service.rs  tray_service.rs  workflow_service.rs  workspace_service.rs  worktree_service.rs
tests/: kanban_e2e.rs
tests/e2e/: accessibility.spec.ts  app.spec.ts  edge-cases.spec.ts  kanban.spec.ts  keyboard-shortcuts.spec.ts  navigation.spec.ts  project.spec.ts  projects.spec.ts  roadmap.spec.ts  settings.spec.ts  sidebar.spec.ts  terminal.spec.ts  toast.spec.ts  wcag.spec.ts  worktrees.spec.ts
