[package]
name = "slashit-app-ui"
version = "0.1.0"
edition = "2021"
authors = ["Barradev Digital Services <admin@barradev.com>"]
license = "Apache-2.0"
description = "SlashIt frontend - Leptos/WASM UI for the AI agent workspace manager"
repository = "https://github.com/BarraDev/slashit"
[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
thiserror = "2"
vte = "0.13"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "KeyboardEvent", "FocusEvent", "WheelEvent", "MouseEvent", "DragEvent", "DataTransfer", "ResizeObserver", "ResizeObserverEntry", "DomRect", "DomRectReadOnly", "Storage", "EventTarget"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[workspace]
members = ["src-tauri", "crates/slashit-ipc", "crates/slashit-cli"]
resolver = "2"
