[package]
name = "slashit-ipc"
version = "0.1.0"
edition = "2021"
authors = ["Barradev Digital Services <admin@barradev.com>"]
license = "Apache-2.0"
description = "IPC protocol types shared between SlashIt app and CLI"
repository = "https://github.com/BarraDev/slashit"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
